# market-microstructure-simulator

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt  start_dashboard.sh  test_basic_functionality.py
cpp/examples/: benchmark.cpp  simple_sim.cpp
cpp/include/mms/: agents.hpp  matching_engine.hpp  order_book.hpp  rng.hpp  simulator.hpp  types.hpp
cpp/src/: agents.cpp  matching_engine.cpp  order_book.cpp  simulator.cpp
cpp/tests/: test_agents.cpp  test_matching_engine.cpp  test_order_book.cpp  test_rng.cpp  test_simulator.cpp  test_types.cpp
dashboard/: app.py  requirements.txt  run_dashboard.py
dashboard/templates/: index.html
python/: mms_bindings.cpp  setup.py
python/mms/: __init__.py  core.py  strategies.py  utils.py
python/notebooks/: analysis.ipynb
python/tests/: test_api.py
scripts/: run_sim.py
